--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 server.port=9090
 spring.application.name=Lab1
-spring.datasource.url=jdbc:h2:mem:emt-2025
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/emt_shop
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 springdoc.swagger-ui.path=/swagger
 springdoc.swagger-ui.enabled=true
 
 spring.security.user.name=admin
 spring.security.user.password=admin
+
